fix overflow issue

--- a/common/styles/hp-config.styl
+++ b/common/styles/hp-config.styl
@@ -16,6 +16,9 @@ $btn
 	text-decoration none
 	transition 0.2s ease-in-out all
 
+// No scrollbar on map
+body
+	overflow-x hidden
 //=======================
 // Custom styles
 //=======================
